# t0-github-ci-bot

./: .gitignore  README.md  main.py  pyproject.toml  test
.github/workflows/: ci-failure-diagnosis.yml  dummy.yml  run-pytest.yml  tensorzero-pr-feedback.yml
docs/: webhook-pr-automation-plan.md
src/: app.py
test-harness/: .secrets-example  workflow-failed.json  workflow-failure.json  workflow-in-progress.json  workflow-requested.json
tests/: test_app.py
