[project]
name = "t0-github-ci-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.1",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
